--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "baseUrl": ".",
     "paths": {
       "@config/*": ["./src/config/*"],
-      "@components/*": ["./src/components/*"]
+      "@component/*": ["./src/component/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
